2019-08-26 Added getter for Content metadata. Added SCORM passed/failed statuses.
2019-08-20 Added alt text support to text identification
2019-08-12 Fixed problem with editable window with audio on IE, EDGE, FIREFOX
2019-07-31 Blocked the download audio in Editable Window module
2019-07-26 Fixed scrolling while dragging the Slider on mobile devices
2019-07-26 Fixed issue with the values of newly added properties being overwritten
2019-07-26 Fixed opacity in Editable Window module
2019-07-22 Removed the ability to download the video in editable window
2019-07-19 Added supporting of only audio to Editable Window
2019-07-15 Fixed problem with editable window with video on IE
2019-07-11 Fixed test - position of IWB toolbar in fullscreen mode
2019-07-11 Fixed position of IWB toolbar in fullscreen mode
2019-07-04 Added translations for Sejer to Paragraph and Editable Window
2019-07-03 Changed structure of a Editable Window
2019-06-27 Fixed saving and closing notes on mobile devices in IWB Toolbar module
2019-06-19 Fixed anchors in Editable Window
2019-06-11 Fixed issue with Report when multiple pages have the same name
2019-06-11 Fixed issue with background color in show answers mode of Text Coloring
2019-06-10 Fixed issues with editable window position centering. Disallow moving the window outside of document.
2019-06-07 Added fullscreen option to editable window.
2019-06-04 Added property to disable or enable editing in popup in Editable window module
2019-05-23 Added title to a ediatble window custon addon
2019-05-14 Fixed issue with setState in Audio on Mobile Safari
2019-05-10 Fixed setting iframe height in Paragraph module
2019-05-10 Added reset button, limited width and limited colors in Editable Window
2019-04-18 Fixed issue with isAttempted command in Paragraph
2019-04-18 Fixed issue with pause command in video only being available from AC scripts
2019-04-17 Added audio to text module
2019-04-17 Fixed sorting on mobile devices in Ordering module