@@ -1,3 +1,4 @@
+2019-09-02 Fixed problem with fullscreen in iframe addon
 2019-08-26 Added getter for Content metadata. Added SCORM passed/failed statuses.
 2019-08-20 Added alt text support to text identification
 2019-08-12 Fixed problem with editable window with audio on IE, EDGE, FIREFOX
